--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: dart-lang/setup-dart@v1
       - run: dart pub get
+        working-directory: LucidMind-Frontend
       - run: dart run build_runner build --release --output build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
