--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: dart-lang/setup-dart@v1
       - run: dart pub get
         working-directory: LucidMind-Frontend
-      - run: dart run build_runner build --release --output build
+      - run: dart run build_runner build --release --output build --delete-conflicting-outputs
         working-directory: LucidMind-Frontend
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
