fix: add entry point for Firebase hosting

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -22,3 +22,4 @@ jobs:
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_LUCIDMIND_85FEE }}
           channelId: live
           projectId: lucidmind-85fee
+          entryPoint: LucidMind-Frontend
