--- a/LucidMind-Backend/dockerfile
+++ b/LucidMind-Backend/dockerfile
@@ -1,24 +1,33 @@
 # Stage 1: Cache Gradle dependencies
-FROM gradle:latest AS cache
+FROM gradle:8-jdk17 AS cache
 RUN mkdir -p /home/gradle/cache_home
 ENV GRADLE_USER_HOME=/home/gradle/cache_home
-COPY build.gradle.* gradle.properties /home/gradle/app/
+COPY build.gradle.* gradle.properties settings.gradle* /home/gradle/app/
 COPY gradle /home/gradle/app/gradle
 WORKDIR /home/gradle/app
-RUN gradle clean build -i --stacktrace
+RUN gradle build --no-daemon -x test -x compileKotlin -x compileJava || return 0
 
 # Stage 2: Build Application
-FROM gradle:latest AS build
+FROM gradle:8-jdk17 AS build
 COPY --from=cache /home/gradle/cache_home /home/gradle/.gradle
 COPY --chown=gradle:gradle . /home/gradle/src
 WORKDIR /home/gradle/src
-# Build the fat JAR, Gradle also supports shadow
-# and boot JAR by default.
-RUN gradle buildFatJar --no-daemon
+RUN gradle installDist --no-daemon
 
 # Stage 3: Create the Runtime Image
-FROM amazoncorretto:22 AS runtime
+FROM amazoncorretto:17 AS runtime
 EXPOSE 8040
 RUN mkdir /app
-COPY --from=build /home/gradle/src/build/libs/*.jar /app/ktor-docker-sample.jar
-ENTRYPOINT ["java","-jar","/app/ktor-docker-sample.jar"]
+
+# Explicitly reference the real directory name (case-sensitive!)
+COPY --from=build /home/gradle/src/build/install/LucidMind-Backend/bin /app/bin
+COPY --from=build /home/gradle/src/build/install/LucidMind-Backend/lib /app/lib
+
+COPY --from=build /home/gradle/src/src/main/resources/firebase-key.json /app/firebase-key.json
+
+RUN chmod +x /app/bin/*
+
+WORKDIR /app
+
+# Match the actual filename (case-sensitive!)
+ENTRYPOINT ["./bin/LucidMind-Backend"]
